2008-11-19  Anders Carlsson  <andersca@apple.com>

        Reviewed by Dan Bernstein.

        Test: plugins/netscape-plugin-setwindow-size-2.html
        
        Fix bug where NPP_SetWindow wasn't getting called for some plug-ins.
        
        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView updateAndSetWindow]):
        Don't bail if the drawing model is not the CA drawing model. Remove some code 
        that was doing the wrong thing.

2008-11-19  Darin Fisher  <darin@chromium.org>

        Reviewed by Geoff Garen.

        https://bugs.webkit.org/show_bug.cgi?id=22345
        Define ScriptValue as a thin container for a JSC::Value*.

        * WebView/WebFrame.mm:
        (-[WebFrame _stringByEvaluatingJavaScriptFromString:forceUserGesture:]):
        * WebView/WebView.mm:
        (-[WebView aeDescByEvaluatingJavaScriptFromString:]):

2008-11-19  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        <rdar://problem/6383762> WebKit r38340 crash on key press in plugin
        
        Set the value to 0 before calling NPP_GetValue, in case the plug-in returns NPERR_NO_ERROR but does not 
        update the value.
        
        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView createPlugin]):

2008-11-19  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.

        Make sure to copy the MIME type.
        
        * Plugins/WebBaseNetscapePluginView.mm:
        (-[WebBaseNetscapePluginView initWithFrame:pluginPackage:URL:baseURL:MIMEType:attributeKeys:attributeValues:loadManually:DOMElement:]):

2008-11-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.
        
        First step toward fixing <rdar://problem/6263293> WebScriptDebugDelegate
        should use intptr_t for sourceId, not int
        
        Added a conditional typedef (currently disabled) to switch sourceId to
        intptr_t in non-Tiger, non-Leopard builds.
