@@ -39,11 +39,15 @@
 #import <WebCore/WebCoreObjCExtras.h>
 #import <WebCore/Document.h>
 #import <WebCore/Element.h>
+#import <WebCore/Frame.h>
+#import <WebCore/Page.h>
 #import <WebKit/DOMPrivate.h>
 #import <wtf/Assertions.h>
 
 #define LoginWindowDidSwitchFromUserNotification    @"WebLoginWindowDidSwitchFromUserNotification"
 #define LoginWindowDidSwitchToUserNotification      @"WebLoginWindowDidSwitchToUserNotification"
+
+using namespace WebCore;
 
 @implementation WebBaseNetscapePluginView
 
@@ -275,8 +279,24 @@
     
     if (![[[self webView] preferences] arePlugInsEnabled])
         return;
+   
+    Frame* frame = core([self webFrame]);
+    if (!frame)
+        return;
+    Page* page = frame->page();
+    if (!page)
+        return;
     
-    if (![self createPlugin])
+    bool wasDeferring = page->defersLoading();
+    if (!wasDeferring)
+        page->setDefersLoading(true);
+
+    BOOL result = [self createPlugin];
+    
+    if (!wasDeferring)
+        page->setDefersLoading(false);
+
+    if (!result)
         return;
     
     _isStarted = YES;
